video-analytics/k8s/prod/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  namespace: prod
  labels:
    app: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      serviceAccountName: analytics-sa
      containers:
        - name: analytics
          image: 385046010615.dkr.ecr.us-east-1.amazonaws.com/analytics-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: analytics
  namespace: prod
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
