video-analytics/k8s/prod/uploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader
  namespace: default
  labels:
    app: uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader
  template:
    metadata:
      labels:
        app: uploader
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      serviceAccountName: uploader-sa
      containers:
        - name: uploader
          image: 385046010615.dkr.ecr.us-east-1.amazonaws.com/uploader-service:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: uploader-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: uploader
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
